0.2.8:
	(2003/10/02)
	- Create softlink to particular Makefile based on Platform info (configure)
	- Add Makefile for *BSD, separate common code & dependent code
	- Allow using "Windows" key as hotkey prefix
	- Cleanup some code in xresource.c
	(2003/XX/XX)
	- Add menu option to disable/enable spellcheck
	- Fixed compilation on FreeBSD
	- Fixed configure/Makefile (checking dl, xft libs)
	- Fixed crashing on KDE 3.x (cvs version)
	- Fixed error with determination of focus window
	  -- Very rarely, found in Links2.1pre9 graphics only (at the moment)
	- Fixed spell checking with "gio<...>"
	- Fixed compilation bug with Debian gcc 2.95.4
	- Updated documents

0.2.7:
	- Fixed Hotkey recording
	- Fixed configure script for XFT detecting
	  -- Looking for xft-config script
	- Enable spell checking as default in configure script
	  -- Disable with --no-spellcheck option
	- Display Vietnamese menu w/o using XFT
	  -- use XmbDrawString

0.2.6:
	- Use XFT (support Vietnamese interface & antilias)
	  -- Auto detect, disable with option --no-xft
	- Remove gtk2 module
	  -- Move xvnkb_gtk.c to "obsolete" folder.
	  -- Remove option --with-gtk2 in configure script
	- Add Event handler for all windows (event.c)
	- Add "Select hotkey" dialog/add resource entry for hotkey
	- Change popup menu style (cascade)
	- Fixed more spell check
	- Fixed tools/xvnkb_ctrl

	- Update documents for Gtk/Gnome 2.x users.
	  -- Gtk/Gnome 2.x apps can use X-Input-Method with xvnkb (see README)

0.2.5:
	- Fix & update documents (locale)
	- Add more options for shared libs compilation
	- Add support for gtk2 (xvnkb_gtk.c)
	  -- Add option --with-gtk2 for configure script
	  -- Usage: $ ./configure --with-gtk2
	- Add more functions for installation script
	  -- Detect and help user create UTF-8 locale
	- Add more scripts for installation (localesetup.sh, xvnkb.sh)
	  -- localesetup.sh: help user creating locale
	  -- xvnkb.sh: a shell script which help user set LD_PRELOAD, LANG automatically